--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacker Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Poppins&family=Source+Sans+Pro:wght@700&family=Vujahday+Script&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
+
 </head>
 
-<body>
-
+<body class="add-color">
+    <h1>Hacking-Lab Cyber Range</h1>
+    <h3>One platform to train them all,</h3>
+    <h3>One platform to assess them,</h3>
+    <h3>One platform to play with them all</h3>
+    <h3> And in their skills enlighten them.</h3>
+    <section>
+        <div class="flexible-container">
+            <div class="gap">
+                <h2>Training</h2>
+                <p>Extend the reach of your skill</p>
+                <p>Apply your knowledge</p>
+            </div>
+            <div class="gap">
+                <h2>Assesments</h2>
+                <p>Find the hackers you need</p>
+                <p>Examine participants skills'</p>
+            </div>
+            <div class="gap">
+                <h2>Events</h2>
+                <p>Have some fun</p>
+                <p>Let them complete</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
